修改Zookeeper的README.md里的参数为:JVMFLAGS="-XX:MaxPermSize=256m -Xmx1g"