@@ -6,7 +6,7 @@ Dockerfile For zookeeper
 Usage:
 ```bash
 docker run --privileged=true -d -p 2181:2181 -p 2888:2888 -p 3888:3888 \
- -e JVMFLAGS=-Xmx1g \
+ -e JVMFLAGS="-XX:MaxPermSize=256m -Xmx1g" \
  -v /etc/localtime:/etc/localtime:ro \
  -v /opt/docker-volumes/zookeeper/conf:/opt/zookeeper/conf \
  -v /opt/docker-volumes/zookeeper/log:/opt/zookeeper/log \
